src/objects/Adjustment__c.object
<CustomObject>
    <description>Adjust LL, Adjuster costs and fees related to placement rent &amp; property. (No Furniture Adjustments!)</description>
    <fields>
        <fullName>Adjustment_Description__c</fullName>
        <label>Adjustment Description</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Effective_Date__c</fullName>
        <inlineHelpText>Enter the date the recurring billing adjustment is effective. This is required for monthly billing adjustments.</inlineHelpText>
        <label>Adjustment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Adjustment__c</fullName>
        <inlineHelpText>Enter the amount the recurring billing should change.</inlineHelpText>
        <label>Billing Adjustment</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Description__c</fullName>
        <description>Text will appear on the invoice for the credit line item.</description>
        <inlineHelpText>This will appear on the invoice.</inlineHelpText>
        <label>Credit Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Frequency__c</fullName>
        <label>Fee Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Adjustment_Fee__c</fullName>
        <label>Hotel Adjustment Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Fee_Effective_Date__c</fullName>
        <label>Hotel Fee Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Fee_Type__c</fullName>
        <label>Hotel Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parking Fee</fullName>
                </value>
                <value>
                    <fullName>Pet Fee</fullName>
                </value>
                <value>
                    <fullName>Other Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Rate_Adjustment__c</fullName>
        <inlineHelpText>Enter the new daily rate.</inlineHelpText>
        <label>Hotel Rate Adjustment</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Room_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel Room Lookup</label>
        <referenceTo>Hotel_Room__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Housing_Adjustment_Fee__c</fullName>
        <inlineHelpText>Enter the one time fee amount.</inlineHelpText>
        <label>Housing Adjustment Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Credit_Proposed_Amount__c</fullName>
        <inlineHelpText>Enter the requested credit amount and submit for approval.</inlineHelpText>
        <label>Housing Credit Proposed Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Fee_Effective_Date__c</fullName>
        <inlineHelpText>Enter the effedtive date for the housing fee.</inlineHelpText>
        <label>Housing Fee Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Fee_Type__c</fullName>
        <label>Housing Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Fee</fullName>
                </value>
                <value>
                    <fullName>Broker Fee</fullName>
                </value>
                <value>
                    <fullName>Break Lease Fee</fullName>
                </value>
                <value>
                    <fullName>Late Fee</fullName>
                </value>
                <value>
                    <fullName>Cancellation Fee</fullName>
                </value>
                <value>
                    <fullName>Pick-Up Fee</fullName>
                </value>
                <value>
                    <fullName>Delivery Fee</fullName>
                </value>
                <value>
                    <fullName>Security Deposit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Other Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <inlineHelpText>Enter the description when Other is chosen as the Fee Type.</inlineHelpText>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Fee_Description__c</fullName>
        <label>Other Fee Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Placement_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Lookup</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Credit_Amount_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should be a negative number.</inlineHelpText>
        <label>Proposed Credit Amount Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prorate_Variance__c</fullName>
        <inlineHelpText>The difference, in dollars, between the CRS standard prorate and prorate amount the landlord prefers.</inlineHelpText>
        <label>Prorate Variance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Adjustment_Effective_Date__c</fullName>
        <label>Rate Adjustment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Adjustment_Effective_Date__c</fullName>
        <label>Rent Adjustment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Adjustment__c</fullName>
        <inlineHelpText>Enter the amount the recurring rent is changing.</inlineHelpText>
        <label>Rent Adjustment</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Mobile_Home__c</fullName>
        <label>Trailer-Mobile Home Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Fee</fullName>
                </value>
                <value>
                    <fullName>Dozer Fee</fullName>
                </value>
                <value>
                    <fullName>Electric Hookup Fee</fullName>
                </value>
                <value>
                    <fullName>Set-Up Fee</fullName>
                </value>
                <value>
                    <fullName>Site Inspection Fee</fullName>
                </value>
                <value>
                    <fullName>Skirting Fee</fullName>
                </value>
                <value>
                    <fullName>Utility Pole Fee</fullName>
                </value>
                <value>
                    <fullName>Winterization Fee</fullName>
                </value>
                <value>
                    <fullName>Other Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Char_ID_HotelRoom__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_HotelRoom</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Placement_Lookup__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Adj-{00000}</displayFormat>
        <label>Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Billing_Adjustment</fullName>
        <active>false</active>
        <description>An adjustment that changes the amount invoiced to the adjuster.</description>
        <label>Billing Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cost_Adjustment</fullName>
        <active>true</active>
        <description>An adjustment that changes the amount paid to the landlord i.e. rent &amp; property specific fees. (No Furniture Adjustments).</description>
        <label>Cost Adjustment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Adjustment_Date_Valildation_ApvdThruDate</fullName>
        <active>false</active>
        <description>Ensures the Date entered by the user is less than the Approved Through Date</description>
        <errorConditionFormula>Adjustment_Effective_Date__c  &gt;  Placement_Lookup__r.Approved_Through_Date__c</errorConditionFormula>
        <errorMessage>The Adjustment Effective Date cannot be greater than the Approved Through Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adjustment_Date_Valildation_MoveIn</fullName>
        <active>false</active>
        <description>Ensures the Date entered by the user is greater than the Move In Date</description>
        <errorConditionFormula>Adjustment_Effective_Date__c  &lt;  Placement_Lookup__r.Move_In_Date__c</errorConditionFormula>
        <errorMessage>The Adjustment Effective Date cannot be less than the Move-In Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_Date_Validation</fullName>
        <active>false</active>
        <description>The effective Date can not be be greater than the Approved Through Date</description>
        <errorConditionFormula>Adjustment_Effective_Date__c &gt;  Placement_Lookup__r.Approved_Through_Date__c</errorConditionFormula>
        <errorMessage>The Adjustment Effective Date cannot be greater than the Approved Through Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hotel_Fee_Effective_Date</fullName>
        <active>false</active>
        <description>If one of the following fields contains data, then Hotel_Fee_Effective_Date must have a date:
Hotel_Fee_Type__c
Fee_Frequency__c
Hotel_Adjustment_Fee__c
Other_Fee_Description__c</description>
        <errorConditionFormula>AND( $RecordType.Name=&quot;Cost Adjustment&quot;,
IF(AND(Other_Fee_Description__c&lt;&gt;null,
LEN(TEXT(Hotel_Fee_Effective_Date__c))=0) ,
true,
OR(
IF(AND(LEN(TEXT(Hotel_Adjustment_Fee__c))&lt;&gt;0,
LEN(TEXT(Hotel_Fee_Effective_Date__c))=0) ,
true,
IF(AND(LEN(TEXT(Fee_Frequency__c))&lt;&gt;0,
LEN(TEXT(Hotel_Fee_Effective_Date__c))=0) ,
true,
OR(
IF(AND(LEN(TEXT(Hotel_Fee_Type__c))&lt;&gt;0,
LEN(TEXT(Hotel_Fee_Effective_Date__c))=0) ,
true, false
)))))))</errorConditionFormula>
        <errorDisplayField>Hotel_Fee_Effective_Date__c</errorDisplayField>
        <errorMessage>Must have a Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hotel_Room_Lookup</fullName>
        <active>true</active>
        <description>Must have Hotel Room</description>
        <errorConditionFormula>AND( $RecordType.Name=&quot;Cost Adjustment&quot;,
IF(AND(Other_Fee_Description__c&lt;&gt;null,
Hotel_Room_Lookup__c=null) ,
true,
OR(
IF(AND(LEN(TEXT(Hotel_Adjustment_Fee__c))&lt;&gt;0,
Hotel_Room_Lookup__c=null) ,
true,
IF(AND(LEN(TEXT(Fee_Frequency__c))&lt;&gt;0,
Hotel_Room_Lookup__c=null),
true,
OR(
IF(AND(LEN(TEXT(Hotel_Fee_Type__c))&lt;&gt;0,
Hotel_Room_Lookup__c=null),
true,
OR(
IF(AND(LEN(TEXT(Rate_Adjustment_Effective_Date__c))&lt;&gt;0,
Hotel_Room_Lookup__c=null),true,
IF(AND(LEN(TEXT(Hotel_Rate_Adjustment__c))&lt;&gt;0,
Hotel_Room_Lookup__c=null),
true,false
))))))))))</errorConditionFormula>
        <errorDisplayField>Hotel_Room_Lookup__c</errorDisplayField>
        <errorMessage>Must have Hotel Room</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Housing_Adjustment_Credit_Negative_Amt</fullName>
        <active>false</active>
        <description>Ensure that Housing Fee Credit adjustments (proposed and approved) have a negative housing fee amount.</description>
        <errorConditionFormula>AND (
 ISPICKVAL( Housing_Fee_Type__c  , &apos;Credit&apos;), 
OR (Housing_Adjustment_Fee__c &gt;0,  Housing_Credit_Proposed_Amount__c  &gt; 0))</errorConditionFormula>
        <errorMessage>The Housng Credit  Adjustment and Proposed Amounts must be a negative amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Housing_Credit_Adjustment_Fee_Approval</fullName>
        <active>false</active>
        <description>If the Housing Adjustment is for a Credit, and the Fee is &lt; $-5.00, then inform the user to enter the fee amount in the Proposed Credit Fee amount field, and submit the adjustment for approval.</description>
        <errorConditionFormula>AND (
ISPICKVAL( Housing_Fee_Type__c  , &apos;Credit&apos;), 
Housing_Adjustment_Fee__c &lt; -5, 
Proposed_Credit_Amount_Approved__c =FALSE
)</errorConditionFormula>
        <errorDisplayField>Housing_Adjustment_Fee__c</errorDisplayField>
        <errorMessage>Housing Credit Adjustment Fees exceeding -$5 must be approved.
Remove the amount from the Housing Adjustment Fee and enter the amount into the Housing Credit Proposed Amount, save the changes.  Submit for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Adjustment_Effective_Date</fullName>
        <active>true</active>
        <description>Hotel_Rate_Adjustment__c contains data then date can not be null</description>
        <errorConditionFormula>AND( $RecordType.Name=&quot;Cost Adjustment&quot;,
IF(AND(LEN(TEXT(Hotel_Rate_Adjustment__c))&lt;&gt;0,
LEN(TEXT(Rate_Adjustment_Effective_Date__c))=0) ,
true, false))</errorConditionFormula>
        <errorDisplayField>Rate_Adjustment_Effective_Date__c</errorDisplayField>
        <errorMessage>Must Have a Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>v_no_hotel_fields_for_housing_cost_adj</fullName>
        <active>false</active>
        <description>Does not allow hotel fields to be entered if the record type is housing.</description>
        <errorConditionFormula>AND( $RecordType.Name=&quot;Cost Adjustment&quot;,
IF(OR(LEN(TEXT(Housing_Fee_Effective_Date__c) )&lt;&gt;0,
LEN(TEXT(Housing_Adjustment_Fee__c))&lt;&gt;0,
LEN(Other_Description__c )&lt;&gt;null,
LEN(TEXT(Rent_Adjustment__c ) )&lt;&gt;0,
LEN(TEXT(Rent_Adjustment_Effective_Date__c ) )&lt;&gt;0,
LEN(TEXT(Prorate_Variance__c) ) &lt;&gt;0,
LEN(TEXT(Housing_Credit_Proposed_Amount__c) )&lt;&gt;0,
LEN(TEXT( Trailer_Mobile_Home__c))&lt;&gt;0,
LEN(TEXT( Housing_Fee_Type__c)) &lt;&gt;0
),
true,
false),
AND(
IF(OR(LEN(TEXT( Hotel_Fee_Effective_Date__c ))&lt;&gt;0,
LEN(TEXT( Hotel_Rate_Adjustment__c ) )&lt;&gt;0,
LEN(Hotel_Room_Lookup__c )&lt;&gt;0,
LEN( Other_Fee_Description__c )&lt;&gt;0,
LEN(TEXT( Rate_Adjustment_Effective_Date__c ) )&lt;&gt;0,
LEN(TEXT( Hotel_Fee_Type__c))&lt;&gt;0 ,
LEN(TEXT( Fee_Frequency__c))&lt;&gt;0
), true, false)
))</errorConditionFormula>
        <errorMessage>You cannot enter Housing and Hotel information on the same adjustment. Please review the type of Adjustment and remove the incorrect fields.</errorMessage>
    </validationRules>
</CustomObject>